# MAS-Ontology

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  ontology.json  pyproject.toml
docs/: spec.md  thesis_summary.md
evaluation/: ground_truth.json
results/: baseline_metrics.json  baseline_metrics_per_question.json  dedup_ablation.json  evaluation_report.md  full_evaluation_report.json  generation_metrics.json  generation_metrics_per_question.json  knowledge_graph_full_gemma.json  knowledge_graph_repaired.json  knowledge_graph_repaired.repair_report.json  latency_results.json  retrieval_metrics.json  retrieval_metrics_per_question.json
src/hirag_ontology/: __init__.py  cli.py  config.py  llm.py  ontology.py
src/hirag_ontology/app/: web_demo.py
src/hirag_ontology/evaluation/: baseline_eval.py  benchmark.py  dedup_ablation.py  generation_eval.py  latency_eval.py  llm_judge.py  retrieval_eval.py  run_eval.py  run_full_eval.py
src/hirag_ontology/pipeline/: __init__.py  chunking.py  deduplication.py  extractor.py  graph_repair.py  knowledge_graph.py  quality.py  reasoning.py  runner.py  typing_agent.py  validator.py
src/hirag_ontology/retrieval/: __init__.py  answering.py  retriever.py  (+1 more)
tests/: test_answering.py  test_chunking.py  test_cli.py  test_deduplication.py  test_evaluation.py  test_extractor.py  test_gemma_runtime.py  test_graph_repair.py  test_json_store.py  test_knowledge_graph.py  test_neo4j_store_unit.py  test_pipeline_demo.py  test_quality.py  test_reasoning.py  test_retriever.py  test_typing_agent.py  test_validator.py  test_web_demo.py
(+7 files in other folders)
