[project]
name = "hirag-ontology-rebuild"
version = "0.1.0"
description = "Python research prototype scaffold for HiRAG-Ontology."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "HiRAG-Ontology contributors" },
]
dependencies = [
  "networkx>=3.2",
]

[project.optional-dependencies]
neo4j = [
  "neo4j>=5.26",
]

[project.scripts]
hirag-ontology = "hirag_ontology.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hirag_ontology"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider --basetemp=.pytest_tmp"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "neo4j: tests that require a live Neo4j service",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["hirag_ontology"]

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true
